--- a/src/main/java/com/wtu/sj/ly/rna/pom.xml
+++ b/src/main/java/com/wtu/sj/ly/rna/pom.xml
@@ -34,6 +34,11 @@
             <version>2.7.2</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
+        <dependency>
             <!-- jsoup HTML parser library @ https://jsoup.org/ -->
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
